--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="bg-dark  text-white">
+<body class="bg-dark  text-white mt-4">
     <div class="container d-flex justify-content-around gap-5">
         <div class="children box-1">
             <img src="./assets/logo.webp" alt="">
@@ -39,14 +39,22 @@
         <div class="children box-4">
             <h4>Follow Us</h4>
             <div class="icons d-flex justify-content-start gap-3 mt-4">
-                <div class="iconss"><a href="https://www.facebook.com/"> <i class="fa-brands fa-facebook-f"> </a></i></div>
-                <div class="iconss"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></a></i></div>
-                <div class="iconss"><a href="https://en.wikipedia.org/wiki/Twitter"><i class="fa-brands fa-twitter"></a></i></div>
+                <div class="iconss"><a href="https://www.facebook.com/"target="blank"> <i class="fa-brands fa-facebook-f"> </a></i></div>
+                <div class="iconss"><a href="https://www.instagram.com/"target="blank"><i class="fa-brands fa-instagram"></a></i></div>
+                <div class="iconss"><a href="https://en.wikipedia.org/wiki/Twitter"target="blank"><i class="fa-brands fa-twitter"></a></i></div>
             </div>
-
-        </div>
+            <img class="mt-4" src="./assets/icon1.webp" alt="">
+            <img class="mt-3" src="./assets/icon2.webp" alt="">
+            
+</div>   
     </div>
 
+<hr>
+ <div class="d-flex justify-content-around">
+                <p>© 2023 Salt'n Pepper Restaurant.</p>
+                <p>Powered Bytossdown.com</p>
+
+            </div>
     
 </body>
 </html>
